--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     
+     <h1>Prototype</h1>
+     <button>Hello</button>
      <script src="script.js"></script>
 </body>
 </html>
